Elemzés nagyjából kész
Egy grafikont már megjelenítek, annak előállításán még finomítani kell, gráfok színezése sem teljeskörű, elő kell állítani azt a gráfot, ami mutatja, hogy merre milyen sűrűn járok

--- a/P4Analyst/AngularApp/ClientApp/src/app/analyze/analyze.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/analyze/analyze.component.html
@@ -6,7 +6,7 @@
         <app-drag-and-drop-list #dragAndDropList></app-drag-and-drop-list>
     </mat-step>
     <mat-step label="Elemzés megtekintése" state="analyst">
-        Step 3
+        <app-charts-display #chartsDisplay></app-charts-display>
     </mat-step>
 
     <ng-template matStepperIcon="select">
