--- a/P4Analyst/AngularApp/ClientApp/src/app/app.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div role="main" [ngClass]="{'my-theme': defaultTheme, 'my-dark-theme': !defaultTheme}">
+<div role="main">
   <div class='row'>
     <div>
-      <app-nav-bar (change)="this.defaultTheme=$event"></app-nav-bar>
+      <app-nav-bar></app-nav-bar>
     </div>
   </div>
 </div>
