--- a/P4Analyst/AngularApp/ClientApp/src/app/file-upload/file-upload.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/file-upload/file-upload.component.html
@@ -28,8 +28,7 @@
       <div class="centered">
         <mat-form-field appearance="outline">
           <input matInput [value]="getName()" readonly>
-          <button mat-mini-fab matSuffix color="primary" (click)="editFile()" style="margin-right: 0.2em;"
-            matTooltip="Szerkesztés">
+          <button mat-mini-fab matSuffix color="primary" (click)="editFile()" style="margin-right: 0.2em;" matTooltip="Szerkesztés">
             <mat-icon>
                 edit
             </mat-icon>
