--- a/P4Analyst/AngularApp/ClientApp/src/app/analyze/analyze.component.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/app/analyze/analyze.component.scss
@@ -15,7 +15,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px 0;
+    margin: 20px;
 }
 
 .number-button {
