--- a/P4Analyst/AngularApp/ClientApp/src/app/components/bottom-sheet-yes-or-no/bottom-sheet-yes-or-no.component.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/app/components/bottom-sheet-yes-or-no/bottom-sheet-yes-or-no.component.scss
@@ -1,6 +1,6 @@
 .question {
     text-align: center;
-    margin-bottom: 30px;
+    margin: 15px 0 25px;
     font-weight: 400;
     font-size: 25px;
 }
