--- a/P4Analyst/AngularApp/ClientApp/src/app/file-list/file-list.component.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/app/file-list/file-list.component.scss
@@ -20,3 +20,20 @@ td, th {
         padding: 20px 50px;
     }
 }
+
+mat-cell.table-icon {
+    display:flex !important;
+    justify-content:center!important;
+}
+
+::ng-deep mat-header-cell {
+    display:flex;
+    justify-content:center;
+    width: 15%;
+}
+
+::ng-deep mat-header-cell.header-width {
+    display:flex;
+    justify-content:center;
+    width: 35% !important;
+}
