--- a/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.scss
@@ -14,6 +14,14 @@ mat-form-field.input-textarea {
 
 ::ng-deep .mat-form-field-infix {
     height: 100%;
+    width: 160px !important;
+}
+
+@media screen and (min-width: 700px) {
+
+    ::ng-deep .mat-form-field-infix {
+        width: 270px !important;
+    }
 }
 
 textarea.mat-input-element {
