--- a/P4Analyst/AngularApp/ClientApp/src/scss/dialog.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/scss/dialog.scss
@@ -14,6 +14,7 @@ button.dialog-close-button {
 
 .mat-dialog-container {
     padding: 0 !important;
+    max-width: 100% !important;
     flex-direction: column;
     overflow: hidden !important;
     border-radius: 5px;
@@ -23,6 +24,7 @@ button.dialog-close-button {
     }
     .mat-dialog-content {
         height: 100%;
+        max-height: 100% !important;
     }
     .mat-dialog-actions {
         padding-right: 20px;
