--- a/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="max-height flex-divs">
-    <div>
+    <!--<div>
         <h1 class="title">Kód feltöltés</h1>
-    </div>
+    </div>-->
 
     <mat-tab-group mat-stretch-tabs class="max-height" animationDuration="750ms">
         <mat-tab label="Fájl feltöltés" [disabled]="isCode()"
