--- a/P4Analyst/AngularApp/ClientApp/src/styles.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/styles.scss
@@ -28,8 +28,15 @@
   .theme-change {
     color: whitesmoke;
   }
+  .drag-drop-box {
+    background-color: #424242 !important;
+    color: whitesmoke !important;
+  }
   .drag-drop-list {
     background-color: #424242 !important;
+  }
+  .chart-title {
+    color: whitesmoke !important;
   }
 }
 
