--- a/P4Analyst/AngularApp/ClientApp/src/scss/dialog.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/scss/dialog.scss
@@ -4,7 +4,7 @@ button.dialog-close-button {
 
 .dialog-header {
     width: 100%;
-    height: 10%;
+    height: 40px;
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
@@ -29,10 +29,10 @@ button.dialog-close-button {
     .mat-dialog-actions {
         padding-right: 20px;
         padding-bottom: 5px;
-        height: 10%;
+        height: 40px;
     }
 }
 
 .dialog-content-with-title-actions {
-    height: calc(100% - 20% - 20px) !important;
+    height: calc(100% - 115px) !important
 }
