--- a/P4Analyst/AngularApp/ClientApp/src/scss/button.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/scss/button.scss
@@ -24,6 +24,8 @@ button.tab-button {
 
 .mat-icon-button:focus,
 .mat-mini-fab:focus,
+.mat-raised-button:focus,
+.mat-button-toggle-button:focus,
 .button:focus,
 .mat-sort-header-button {
   outline: none !important;
