--- a/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.html
@@ -1,21 +1,10 @@
 <div class="max-height flex-divs">
-    <!--<div>
-        <h1 class="title">Kód feltöltés</h1>
-    </div>-->
-
     <mat-tab-group mat-stretch-tabs class="max-height" animationDuration="750ms">
         <mat-tab label="Fájl feltöltés" [disabled]="isCode()"
             [matTooltipDisabled]="!isCode()" matTooltip="Fájlból feltöltéshez törölje ki a beírt szöveget!">
-            <!--<ng-template mat-tab-label>
-                <label  class="labelHeading"
-                [matTooltipDisabled]="!isCode()" matTooltip="Fájlból feltöltéshez törölje ki a beírt szöveget!">
-                    Fájl feltöltés
-                </label>
-            </ng-template>-->
             <app-file-upload (change)="onChange($event)"></app-file-upload>
         </mat-tab>
-        <mat-tab label="Szövegbevitel" [disabled]="isFile()"
-            [matTooltipDisabled]="!isFile()" matTooltip="Szövegbevitelhez törölje ki a feltöltött fájlt!">
+        <mat-tab label="Szövegbevitel" [disabled]="isFile()">
             <mat-form-field appearance="fill" class="input-textarea">
                 <mat-label>Írd vagy másold be a kódot</mat-label>
                 <textarea matInput [(ngModel)]="code" placeholder="control Ingress(inout headers hdr..."></textarea>
