--- a/P4Analyst/AngularApp/ClientApp/src/app/drag-and-drop-list/drag-and-drop-list.component.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/app/drag-and-drop-list/drag-and-drop-list.component.scss
@@ -45,11 +45,11 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
-  .example-box:last-child {
+  .drag-drop-box:last-child {
     border: none;
   }
   
-  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  .drag-drop-list.cdk-drop-list-dragging .drag-drop-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
