--- a/P4Analyst/AngularApp/ClientApp/src/scss/theme.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/scss/theme.scss
@@ -1,10 +1,10 @@
 @import '~@angular/material/theming';
 
-$my-theme-primary: mat-palette($mat-indigo, 700, 300, 900);
-$my-theme-accent: mat-palette($mat-light-blue, 700, 300, 900);
-$my-theme-warn: mat-palette($mat-red, 700, 300, 900);
+$theme-primary: mat-palette($mat-indigo, 700, 300, 900);
+$theme-accent: mat-palette($mat-light-blue, 700, 300, 900);
+$theme-warn: mat-palette($mat-red, 700, 300, 900);
 
-$my-dark-theme-primary: mat-palette($mat-purple, 500, 500, 500);
+$dark-theme-primary: mat-palette($mat-purple, 500, 500, 500);
 
-$my-theme: mat-light-theme($my-theme-primary, $my-theme-accent, $my-theme-warn);
-$my-dark-theme: mat-dark-theme($my-dark-theme-primary, $my-theme-accent, $my-theme-warn);
+$theme: mat-light-theme($theme-primary, $theme-accent, $theme-warn);
+$dark-theme: mat-dark-theme($dark-theme-primary, $theme-accent, $theme-warn);
