--- a/P4Analyst/AngularApp/ClientApp/src/styles.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/styles.scss
@@ -7,17 +7,17 @@
 @import './scss/dialog.scss';
 @import './scss/button.scss';
 
-.my-theme {
-  @include angular-material-theme($my-theme);
-  @include custom-components-theme($my-theme);
+.theme {
+  @include angular-material-theme($theme);
+  @include custom-components-theme($theme);
   .mat-stepper-horizontal {
     background-color: #fafafa;
   }
 }
 
-.my-dark-theme {
-  @include angular-material-theme($my-dark-theme);
-  @include custom-components-theme($my-dark-theme);
+.dark-theme {
+  @include angular-material-theme($dark-theme);
+  @include custom-components-theme($dark-theme);
   .dropzone {
     background-color: rgba(255, 255, 255, 0.1) !important;
     color: rgba(255, 255, 255, 0.7) !important;
