--- a/P4Analyst/AngularApp/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,5 @@
 <div class="p4-analyzer-container" [class.p4-analyzer-is-mobile]="mobileQuery.matches">
   <mat-toolbar color="primary" class="p4-analyzer-toolbar">
-    <!--<button mat-icon-button (click)="mobileQuery.matches ? [snav.toggle(), animatedIcon.toggle()] : [opened=!opened, animatedIcon.toggle()]">-->
     <button mat-icon-button (click)="[snav.toggle(), animatedIcon.toggle()]">
       <mat-animated-icon #animatedIcon start="keyboard_arrow_left" end="keyboard_arrow_right"
         colorStart="white" colorEnd="white" animate="false">
@@ -27,31 +26,30 @@
   <mat-sidenav-container autosize class="p4-analyzer-sidenav-container"
                          [style.marginTop.px]="mobileQuery.matches ? 56 : 0"
                          (backdropClick)="animatedIcon.toggle()">
-    <mat-sidenav #snav id="mat-sidenav" [mode]="mobileQuery.matches ? 'over' : 'side'"
-                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56"
-                 [attr.color]="'primary'">
-                 <!-- opened="true"-->
+    <mat-sidenav #snav id="mat-sidenav" [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" [attr.color]="'primary'">
         <mat-nav-list>
-        <a mat-list-item [routerLink]="['/home']"
-         [matTooltipDisabled]="opened" matTooltipPosition="right" matTooltip="Főoldal">
+        <a mat-list-item [routerLink]="['/home']">
           <mat-icon>
             home
           </mat-icon>
-          <h5 *ngIf="opened">Főoldal</h5>
+          <h5>Főoldal</h5>
         </a>
-        <a mat-list-item [routerLink]="['/help']"
-         [matTooltipDisabled]="opened" matTooltipPosition="right" matTooltip="Súgó">
+        <a mat-list-item [routerLink]="['/help']">
           <mat-icon>
             help
           </mat-icon>
-          <h5 *ngIf="opened">Súgó</h5>
+          <h5>Súgó</h5>
         </a>
-        <a mat-list-item [routerLink]="['/files']"
-         [matTooltipDisabled]="opened" matTooltipPosition="right" matTooltip="Fájlok">
+        <a mat-list-item [routerLink]="['/files']">
           <mat-icon>
             folder
           </mat-icon>
-          <h5 *ngIf="opened">Fájlok</h5>
+          <h5>Fájlok</h5>
+        </a>
+        <a mat-list-item href="https://p4.org/" target="_blank">
+          <mat-icon svgIcon="p4">
+          </mat-icon>
+          <h5>P4 oldala</h5>
         </a>
       </mat-nav-list>
     </mat-sidenav>
