--- a/P4Analyst/AngularApp/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -29,26 +29,21 @@
     <mat-sidenav #snav id="mat-sidenav" [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" [attr.color]="'primary'">
         <mat-nav-list>
         <a mat-list-item [routerLink]="['/home']">
-          <mat-icon>
-            home
-          </mat-icon>
+          <mat-icon>home</mat-icon>
           <h5>Főoldal</h5>
         </a>
         <a mat-list-item [routerLink]="['/help']">
-          <mat-icon>
-            help
-          </mat-icon>
+          <mat-icon>help</mat-icon>
           <h5>Súgó</h5>
         </a>
         <a mat-list-item [routerLink]="['/files']">
-          <mat-icon>
-            folder
-          </mat-icon>
+          <mat-icon>folder</mat-icon>
           <h5>Fájlok</h5>
         </a>
         <a mat-list-item href="https://p4.org/" target="_blank">
-          <mat-icon svgIcon="p4">
-          </mat-icon>
+          <!--<mat-icon svgIcon="p4">
+          </mat-icon>-->
+          <mat-icon>language</mat-icon>
           <h5>P4 oldala</h5>
         </a>
       </mat-nav-list>
