--- a/P4Analyst/AngularApp/ClientApp/src/app/help/help.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/help/help.component.html
@@ -1,1 +1,25 @@
-<h1>HEEEEEEEEELP! HEEEEEEEEELP! HEEEEEEEEELP! HEEEEEEEEELP! HEEEEEEEEELP!</h1>
+<h1 class="help-title">Súgó oldal</h1>
+
+<div class="help-main-div">
+    <div>
+        Az oldal egy gráf alapú P4 programokat elemző  megjelenítéséért felel.
+    </div>
+    <div style="padding: 10px 0;">
+        Ha nem tudnád mi az a P4, akkor az oldalsó navigációs menüből eléred a hivatalos honlapját,
+        vagy a fájlok alatt tudsz találni olyan kódot, amire elvégezhető az elemzés.
+    </div>
+    <div>
+        Ha már tudod mi az a P4, akkor egy kis segítséget adok, hogy az oldal biztos működése fenntartható legyen.
+        <ul>
+            <li>Az Apply függvénybe ne helyezz el Else if utasítást, az elemző erre még nincsen felkészülve.</li>
+            <li>Az Action-ökön belül ne használj elágazást, erre sincsen még készen az elemző.</li>
+            <li>A Parser és Deparser függvények feldolgozását nem végzi az elemző, ezek helyett kézzel behivetőek az állapotok.</li>
+        </ul>  
+    </div>
+    <div style="padding: 10px 0;">
+        Az oldalon a gráfokkal sok interakció elvégezhető, amik segítik a program megértését, valamint a P4-ben annyira nem jártas emberek figyelmét is lekötik.
+    </div>
+    <div>
+        Jó időtöltést a honlapon!
+    </div>
+</div>
